--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,48 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.so
+*.pyd
 
 # Distribution / packaging
 dist/
 build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
 
 # Virtual environments
 venv/
 env/
 ENV/
+env.bak/
+venv.bak/
 .env
 .venv
 
@@ -22,22 +54,29 @@ ENV/
 *.swp
 *.swo
 *~
-
-# Project specific
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
+.spyderproject
+.spyproject
+.ropeproject
+.project
+.pydevproject
 
 # Local development settings
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
 
 # Logs
 logs/
 *.log
+log/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
 # Database
 *.db
@@ -55,9 +94,44 @@ logs/
 .dmypy.json
 dmypy.json
 
-# Poetry
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# Package management
+pipfile.lock
 poetry.lock
+requirements.txt.bak
+
+# Documentation
+/site
+docs/_build/
+docs/autoapi/
+
+# Deployment files
+kubernetes/secrets/
+*.pem
+.netlify
+.vercel
 
 # Other
 .DS_Store
 Thumbs.db
+.directory
+*.jfif
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.webp
+!assets/*.png
+!assets/*.jpg
+!assets/*.jpeg
+!assets/*.gif
+!assets/*.webp
+
