--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy FastAPI App
+name: Build and Test FastAPI App
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
     
     steps:
@@ -38,17 +38,14 @@ jobs:
         pytest || echo "No tests found, continuing anyway..."
       continue-on-error: true
       
-    - name: Build and push Docker image
+    - name: Build Docker image (without push)
       uses: docker/build-push-action@v4
       with:
         context: .
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ github.repository }}:${{ github.sha }}
+        push: false
+        load: true
+        tags: imagineapps-backend:latest
         
-    - name: Deploy to Azure Web App
-      if: github.event_name != 'pull_request'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ github.repository }}:${{ github.sha }}
+    - name: Test Docker image
+      run: |
+        docker run --rm imagineapps-backend:latest echo "Docker image built successfully!"
